working on database table class methods

--- a/sitebuilder.server.app.dev/src/main/resources/config.properties
+++ b/sitebuilder.server.app.dev/src/main/resources/config.properties
@@ -10,3 +10,11 @@ user.area=${user.home}/zodiac.sitebuilder.server.dev
 
 ### Development
 scout.dev.mode=true
+
+### Database
+sitebuilder.database.jdbc.mapping.name=jdbc:derby:memory:sitebuilder-database
+sitebuilder.database.autocreate=true
+sitebuilder.database.autopopulate=true
+
+### Application specific
+sitebuilder.superuser=system
