--- a/sitebuilder.shared/.classpath
+++ b/sitebuilder.shared/.classpath
@@ -38,5 +38,14 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/gagli/.m2/repository/org/eclipse/scout/rt/org.eclipse.scout.rt.client/6.0.200.0/org.eclipse.scout.rt.client-6.0.200.0.jar" sourcepath="C:/Users/gagli/.m2/repository/org/eclipse/scout/rt/org.eclipse.scout.rt.client/6.0.200.0/org.eclipse.scout.rt.client-6.0.200.0-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="maven.groupId" value="org.eclipse.scout.rt"/>
+			<attribute name="maven.artifactId" value="org.eclipse.scout.rt.client"/>
+			<attribute name="maven.version" value="6.0.200.0"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
