--- a/sitebuilder.shared/src/main/resources/zodiac/sitebuilder/shared/texts/Texts.properties
+++ b/sitebuilder.shared/src/main/resources/zodiac/sitebuilder/shared/texts/Texts.properties
@@ -4,13 +4,33 @@ ApplicationTitle=SiteBuilderApp
 AuthorizationFailed=Permission denied
 Edit=Edit
 Exit=Exit
+F1=F1
+F2=F2
+F3=F3
+F4=F4
+F5=F5
+F6=F6
 File=File
+Form1=Form1
+Form2=Form2
+FormType=Form Type
 HelloWorld=Hello World
+Injector=Injector
+LogForm=Log Form
+LogTablePage=Log TablePage
+LogType=Log Type
+Logs=Logs
 Message=Message
 MessageFromServer=Message from Server
+Project=Project
 Prompt=Prompt
+Q0=Q0
+Q1=Q1
+Q2=Q2
+Q3=Q3
 QuestionForm=Question Form
 QuestionsList=Questions List
 Settings=Settings
 SiteBuilderApp=SiteBuilder App
 Work=Work
+bool=bool
