trying to fix issue with populating shared source folder

--- a/sitebuilder.shared/src/main/resources/zodiac/sitebuilder/shared/texts/Texts.properties
+++ b/sitebuilder.shared/src/main/resources/zodiac/sitebuilder/shared/texts/Texts.properties
@@ -13,7 +13,9 @@ F6=F6
 File=File
 Form1=Form1
 Form2=Form2
+FormName=Form Name
 FormType=Form Type
+FormsList=Forms List
 HelloWorld=Hello World
 Injector=Injector
 LogForm=Log Form
