--- a/sitebuilder.shared/src/main/resources/zodiac/sitebuilder/shared/texts/Texts.properties
+++ b/sitebuilder.shared/src/main/resources/zodiac/sitebuilder/shared/texts/Texts.properties
@@ -13,8 +13,10 @@ F6=F6
 File=File
 Form1=Form1
 Form2=Form2
+Form=Form
 FormName=Form Name
 FormType=Form Type
+Forms=Forms
 FormsList=Forms List
 HelloWorld=Hello World
 Injector=Injector
