--- a/sitebuilder.shared/src/main/resources/zodiac/sitebuilder/shared/texts/Texts.properties
+++ b/sitebuilder.shared/src/main/resources/zodiac/sitebuilder/shared/texts/Texts.properties
@@ -36,5 +36,6 @@ QuestionForm=Question Form
 QuestionsList=Questions List
 Settings=Settings
 SiteBuilderApp=SiteBuilder App
+UpdateColumns=Update Columns
 Work=Work
 bool=bool
