--- a/sitebuilder.shared/src/main/resources/zodiac/sitebuilder/shared/texts/Texts.properties
+++ b/sitebuilder.shared/src/main/resources/zodiac/sitebuilder/shared/texts/Texts.properties
@@ -3,6 +3,7 @@ Answer1=Answer1
 ApplicationTitle=SiteBuilderApp
 AuthorizationFailed=Permission denied
 Edit=Edit
+Enable=Enable
 Exit=Exit
 F1=F1
 F2=F2
@@ -14,6 +15,7 @@ File=File
 Form1=Form1
 Form2=Form2
 Form=Form
+FormName0=Form Name
 FormName=Form Name
 FormType=Form Type
 Forms=Forms
