--- a/sitebuilder.shared/src/main/resources/zodiac/sitebuilder/shared/texts/Texts.properties
+++ b/sitebuilder.shared/src/main/resources/zodiac/sitebuilder/shared/texts/Texts.properties
@@ -2,6 +2,7 @@ About=About
 Answer1=Answer1
 ApplicationTitle=SiteBuilderApp
 AuthorizationFailed=Permission denied
+Delete=Delete
 Edit=Edit
 Enable=Enable
 Exit=Exit
